@@ -187,7 +187,7 @@ bgcolor="#ffffff">
     <UL>
       <LI>Concurrency_Service</LI>
       <LI>Dump_Schedule</LI>
-      <LI>LifeCycle_Service</LI>
+      <LI>LifeCycle_Service/tao_coslifecycle</LI>
       <LI>LoadBalancer</LI>
       <LI>CosEvent_Service</LI>
       <LI>Event_Service</LI>
